--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "author": "James DiGioia <jamesorodig@gmail.com> (http://jamesdigioia.com)",
   "license": "ISC",
   "dependencies": {
-    "@std/esm": "^0.12.2",
-    "mocha": "^4.0.1"
+    "@std/esm": "^0.12.2"
   },
   "@std/esm": {
     "esm": "js",
